--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/burger1x1.webp" class="d-block w-100" alt="...">
+                <img src="./assets/burger1x1.webp" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./assets/burger2x1.webp" class="d-block w-100" alt="...">
+                <img src="./assets/burger2x1.webp" class="d-block w-50" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./assets/burger3x1.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/burger3x1.jpeg" class="d-block w-50" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -86,6 +86,18 @@
         </div>
 
     </div>
+
+    <footer>
+        <div class="direccion">
+            <h3>Calle 1234</h3>
+        </div>
+        <div class="contacto">
+            <h4>Promociones</h4>
+            <h4>Nuestra carta</h4>
+            <h4>Nosotros</h4>
+            <h4>Galería</h4>
+        </div>
+    </footer>
 
 
 
