--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
      <!-- FONTSAWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">   
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <title>Smash Burguers</title>
 </head>
@@ -36,13 +37,13 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <a class="wpp" href="">
+    <a class="wpp" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..." target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
     <h1>Smash Burguer</h1>
     <h2>Las mejores Burguers de la ciudad</h2>
-    <a class="pedido" href="">Hacé tu Pedido!</a>
+    <a class="pedido" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..." target="_blank">Hacé tu Pedido!</a>
 
     <div class="burguers">
         <div class="card">
