--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-     <!-- FONTSAWESOME -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">   
+    <!-- FONTSAWESOME -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <title>Smash Burguers</title>
@@ -19,13 +19,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/burger1x1.webp" class="d-block w-50" alt="...">
+                <img src="./assets/burger1x1.webp" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./assets/burger2x1.webp" class="d-block w-50" alt="...">
+                <img src="./assets/burger2x1.webp" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./assets/burger3x1.jpeg" class="d-block w-50" alt="...">
+                <img src="./assets/burger3x1.jpeg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -37,55 +37,129 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <a class="wpp" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..." target="_blank">
+    <a class="wpp" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
+        target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
     <h1>Smash Burguer</h1>
     <h2>Las mejores Burguers de la ciudad</h2>
-    <a class="pedido" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..." target="_blank">Hacé tu Pedido!</a>
+    <a class="pedido" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
+        target="_blank">Hacé tu Pedido!
+    </a>
+
+    <h3>(Todas las burgers vienen acompañadas con papas)</h3>
 
     <div class="burguers">
         <div class="card">
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Burguer</h5>
-                <a href="#" class="btn btn-primary">Más info</a>
+                <h4 class="card-title">Clasica Burguer</h4>
+                <button class="btn" id="clasica">
+                    Más info
+                </button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalClasica">
+                <div class="modal_">
+                    <h4>Clasica Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>1 medallon de 120gr, lechuga, tomate, cebolla, huevo y cheddar.</p>
+                    <div class="carrito">
+                        <button class="btn" id="cerrarClasica">Cerrar</button>
+                        <button class="btn" id="agregarClasica">Agregar al carrito</button>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="card">
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Burguer</h5>
-                <a href="#" class="btn btn-primary">Más info</a>
+                <h4 class="card-">Mega Burguer</h4>
+                <button class="btn" id="mega">
+                    Más info
+                </button>
+                <!--MODAL-->
+                <div class="modal_container" id="modalMega">
+                    <div class="modal_">
+                        <h4>Mega Burguer</h4>
+                        <p>Ingredientes:</p>
+                        <p>2 medallones de 120gr, cebolla, panceta y doble cheddar.</p>
+                        <div class="carrito">
+                            <button class="btn" id="cerrarMega">Cerrar</button>
+                            <button class="btn" id="agregarMega">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="card">
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Burguer</h5>
-                <a href="#" class="btn btn-primary">Más info</a>
+                <h4 class="card-title">Premium Burguer</h4>
+                <button class="btn" id="premium">
+                    Más info
+                </button>
+                <!--MODAL-->
+                <div class="modal_container" id="modalPremium">
+                    <div class="modal_">
+                        <h4>Premium Burguer</h4>
+                        <p>Ingredientes:</p>
+                        <p>2 medallones de 120gr, lechuga, tomate, panceta, huevo y triple cheddar.</p>
+                        <div class="carrito">
+                            <button class="btn" id="cerrarPremium">Cerrar</button>
+                            <button class="btn" id="agregarPremium">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="card">
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Burguer</h5>
-                <a href="#" class="btn btn-primary">Más info</a>
+                <h4 class="card-title">Triple Burger</h4>
+                <button class="btn" id="triple">
+                    Más info
+                </button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalTriple">
+                <div class="modal_">
+                    <h4>Triple Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>3 medallones de 120gr, panceta, huevo, doble cheddar y salsa de la casa.</p>
+                    <div class="carrito">
+                        <button class="btn" id="cerrarTriple">Cerrar</button>
+                        <button class="btn" id="agregarTriple">Agregar al carrito</button>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="card">
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">burger</h5>
-                <a href="#" class="btn btn-primary">Más info</a>
+                <h4 class="card-title">Chesse Burger</h4>
+                <button class="btn" id="chesse">
+                    Más info
+                </button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalChesse">
+                <div class="modal_">
+                    <h4>Cheese Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>2 medallones de 120gr, panceta y doble cheddar.</p>
+                    <div class="carrito">
+                        <button class="btn" id="cerrarChesse">Cerrar</button>
+                        <button class="btn" id="agregarChesse">Agregar al carrito</button>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 
     <footer>
@@ -101,12 +175,12 @@
     </footer>
 
 
-
-
     <!--BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
