--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- FONTSAWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <!--AnimateCSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <title>Smash Burguers</title>
@@ -37,13 +39,19 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <a class="wpp" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
-        target="_blank">
-        <i class="fa-brands fa-whatsapp"></i>
-    </a>
 
-    <h1>Smash Burguer</h1>
+    <div class="compra">
+        <a class="wpp" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
+            target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+    
+        <img src="./assets/carrito.png" alt="Carrito de Compras" class="verCarrito" id="verCarrito">
+    </div>
+
+    <h1 class="animate__animated animate__jackInTheBox">Smash Burguer</h1>
     <h2>Las mejores Burguers de la ciudad</h2>
+
     <a class="pedido" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
         target="_blank">Hacé tu Pedido!
     </a>
@@ -55,6 +63,7 @@
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Clasica Burguer</h4>
+                <h5>$680</h5>
                 <button class="btn" id="clasica">
                     Más info
                 </button>
@@ -77,6 +86,7 @@
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h4 class="card-">Mega Burguer</h4>
+                <h5>$800</h5>
                 <button class="btn" id="mega">
                     Más info
                 </button>
@@ -99,6 +109,7 @@
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Premium Burguer</h4>
+                <h5>$880</h5>
                 <button class="btn" id="premium">
                     Más info
                 </button>
@@ -121,6 +132,7 @@
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Triple Burger</h4>
+                <h5>$990</h5>
                 <button class="btn" id="triple">
                     Más info
                 </button>
@@ -143,6 +155,7 @@
             <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h4 class="card-title">Chesse Burger</h4>
+                <h5>$615</h5>
                 <button class="btn" id="chesse">
                     Más info
                 </button>
@@ -163,14 +176,12 @@
     </div>
 
     <footer>
-        <div class="direccion">
-            <h3>Calle 1234</h3>
-        </div>
+        <p>Calle 1234</p>
         <div class="contacto">
-            <h4>Promociones</h4>
-            <h4>Nuestra carta</h4>
-            <h4>Nosotros</h4>
-            <h4>Galería</h4>
+            <p>Promociones</p>
+            <p>Nuestra carta</p>
+            <p>Nosotros</p>
+            <p>Galería</p>
         </div>
     </footer>
 
@@ -178,7 +189,8 @@
     <!--BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 
     <script src="./index.js"></script>
 </body>
