--- a/index.html
+++ b/index.html
@@ -39,34 +39,54 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
+    <!--LOGO WPP Y CARRITO DE COMPRA-->
     <div class="compra">
         <a class="wpp" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
             target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
         </a>
-    
-        <img src="./assets/carrito.png" alt="Carrito de Compras" class="verCarrito" id="verCarrito">
+
+        <img src="./assets/carrito.png" alt="Carrito de Compras" class="verCarrito" id="cart-icon">
+    </div>
+
+    <!--carrito del shop-->
+    <div class="cart">
+        <h2 class="cart-tittle">Tu pedido</h2>
+        <div class="cart-content">
+
+        </div>
+        <!--TOTAL-->
+        <div class="total">
+            <div class="total-title">Total</div>
+            <div class="total-price">$0</div>
+        </div>
+        <!--BUY BUTTON-->
+        <button type="button" class="btn-buy">Comprar ahora</button>
+        <!--CART CLOSE-->
+        <i class="fa-regular fa-x" id="close-cart"></i>
     </div>
 
     <h1 class="animate__animated animate__jackInTheBox">Smash Burguer</h1>
     <h2>Las mejores Burguers de la ciudad</h2>
 
+    <!--API DE WPP-->
     <a class="pedido" href="https://api.whatsapp.com/send?phone=3415089149&text=Hola, quisiera encargar..."
         target="_blank">Hacé tu Pedido!
     </a>
 
     <h3>(Todas las burgers vienen acompañadas con papas)</h3>
 
+    <!--SHOP HAMBURGUESAS-->
     <div class="burguers">
         <div class="card">
-            <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Clasica Burguer</h4>
-                <h5>$680</h5>
+                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Clasica Burguer</h2>
+                <h5 class="price">$680</h5>
                 <button class="btn" id="clasica">
                     Más info
                 </button>
+                <button class="add-cart btn">Agregar al carrito</button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalClasica">
@@ -74,68 +94,63 @@
                     <h4>Clasica Burguer</h4>
                     <p>Ingredientes:</p>
                     <p>1 medallon de 120gr, lechuga, tomate, cebolla, huevo y cheddar.</p>
-                    <div class="carrito">
-                        <button class="btn" id="cerrarClasica">Cerrar</button>
-                        <button class="btn" id="agregarClasica">Agregar al carrito</button>
-                    </div>
+                    <button class="btn" id="cerrarClasica">Cerrar</button>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-">Mega Burguer</h4>
-                <h5>$800</h5>
+                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Mega Burguer</h4>
+                <h5 class="price">$800</h5>
                 <button class="btn" id="mega">
                     Más info
                 </button>
-                <!--MODAL-->
-                <div class="modal_container" id="modalMega">
-                    <div class="modal_">
-                        <h4>Mega Burguer</h4>
-                        <p>Ingredientes:</p>
-                        <p>2 medallones de 120gr, cebolla, panceta y doble cheddar.</p>
-                        <div class="carrito">
-                            <button class="btn" id="cerrarMega">Cerrar</button>
-                            <button class="btn" id="agregarMega">Agregar al carrito</button>
-                        </div>
-                    </div>
+                <button class="btn add-cart">Agregar al carrito</button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalMega">
+                <div class="modal_">
+                    <h4>Mega Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>2 medallones de 120gr, cebolla, panceta y doble cheddar.</p>
+                    <button class="btn" id="cerrarMega">Cerrar</button>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Premium Burguer</h4>
-                <h5>$880</h5>
+                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Premium Burguer</h4>
+                <h5 class="price">$880</h5>
                 <button class="btn" id="premium">
                     Más info
                 </button>
-                <!--MODAL-->
-                <div class="modal_container" id="modalPremium">
-                    <div class="modal_">
-                        <h4>Premium Burguer</h4>
-                        <p>Ingredientes:</p>
-                        <p>2 medallones de 120gr, lechuga, tomate, panceta, huevo y triple cheddar.</p>
-                        <div class="carrito">
-                            <button class="btn" id="cerrarPremium">Cerrar</button>
-                            <button class="btn" id="agregarPremium">Agregar al carrito</button>
-                        </div>
-                    </div>
+                <button class="btn add-cart">Agregar al carrito</button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalPremium">
+                <div class="modal_">
+                    <h4>Premium Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>2 medallones de 120gr, lechuga, tomate, panceta, huevo y triple cheddar.</p>
+                    <button class="btn" id="cerrarPremium">Cerrar</button>
+
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Triple Burger</h4>
-                <h5>$990</h5>
+                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Triple Burger</h4>
+                <h5 class="price">$990</h5>
                 <button class="btn" id="triple">
                     Más info
                 </button>
+                <button class="btn add-cart">Agregar al carrito</button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalTriple">
@@ -143,22 +158,20 @@
                     <h4>Triple Burguer</h4>
                     <p>Ingredientes:</p>
                     <p>3 medallones de 120gr, panceta, huevo, doble cheddar y salsa de la casa.</p>
-                    <div class="carrito">
-                        <button class="btn" id="cerrarTriple">Cerrar</button>
-                        <button class="btn" id="agregarTriple">Agregar al carrito</button>
-                    </div>
+                    <button class="btn" id="cerrarTriple">Cerrar</button>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Chesse Burger</h4>
-                <h5>$615</h5>
+                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Chesse Burger</h4>
+                <h5 class="price">$615</h5>
                 <button class="btn" id="chesse">
                     Más info
                 </button>
+                <button class="btn add-cart">Agregar al carrito</button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalChesse">
@@ -166,10 +179,7 @@
                     <h4>Cheese Burguer</h4>
                     <p>Ingredientes:</p>
                     <p>2 medallones de 120gr, panceta y doble cheddar.</p>
-                    <div class="carrito">
-                        <button class="btn" id="cerrarChesse">Cerrar</button>
-                        <button class="btn" id="agregarChesse">Agregar al carrito</button>
-                    </div>
+                    <button class="btn" id="cerrarChesse">Cerrar</button>
                 </div>
             </div>
         </div>
@@ -188,10 +198,9 @@
 
     <!--BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous">
-    </script>
-
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+        </script>
+    <!--JS PROPIO-->
     <script src="./index.js"></script>
 </body>
 
