--- a/index.html
+++ b/index.html
@@ -21,23 +21,19 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/burger1x1.webp" class="d-block w-100" alt="...">
+                <img src="./assets/mega.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./assets/burger2x1.webp" class="d-block w-100" alt="...">
+                <img src="./assets/trple burguer.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="./assets/burger3x1.jpeg" class="d-block w-100" alt="...">
+                <img src="./assets/cheese.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/clasica.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        
     </div>
     <!--LOGO WPP Y CARRITO DE COMPRA-->
     <div class="compra">
@@ -80,20 +76,20 @@
     <div class="burguers">
         <div class="card">
             <div class="card-body">
-                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/clasica.jpg" class="card-img-top" alt="...">
                 <h4 class="product-title">Clasica Burguer</h2>
-                <h5 class="price">$680</h5>
+                <h5 class="price">$700</h5>
                 <button class="btn" id="clasica">
                     Más info
                 </button>
-                <button class="add-cart btn">Agregar al carrito</button>
+                <button class="add-cart btn">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalClasica">
                 <div class="modal_">
                     <h4>Clasica Burguer</h4>
                     <p>Ingredientes:</p>
-                    <p>1 medallon de 120gr, lechuga, tomate, cebolla, huevo y cheddar.</p>
+                    <p>2 medallon de 120gr, doble queso cheddar, tomate, lechuga y salsa de la casa.</p>
                     <button class="btn" id="cerrarClasica">Cerrar</button>
                 </div>
             </div>
@@ -101,20 +97,20 @@
 
         <div class="card">
             <div class="card-body">
-                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/mega.jpg" class="card-img-top" alt="...">
                 <h4 class="product-title">Mega Burguer</h4>
-                <h5 class="price">$800</h5>
+                <h5 class="price">$770</h5>
                 <button class="btn" id="mega">
                     Más info
                 </button>
-                <button class="btn add-cart">Agregar al carrito</button>
+                <button class="btn add-cart">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalMega">
                 <div class="modal_">
                     <h4>Mega Burguer</h4>
                     <p>Ingredientes:</p>
-                    <p>2 medallones de 120gr, cebolla, panceta y doble cheddar.</p>
+                    <p>2 medallones de 120gr, cebolla caramelizada y combinación de queso muzzarella y queso azul.</p>
                     <button class="btn" id="cerrarMega">Cerrar</button>
                 </div>
             </div>
@@ -122,42 +118,41 @@
 
         <div class="card">
             <div class="card-body">
-                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/premium.jpg" class="card-img-top" alt="...">
                 <h4 class="product-title">Premium Burguer</h4>
-                <h5 class="price">$880</h5>
+                <h5 class="price">$900</h5>
                 <button class="btn" id="premium">
                     Más info
                 </button>
-                <button class="btn add-cart">Agregar al carrito</button>
+                <button class="btn add-cart">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalPremium">
                 <div class="modal_">
                     <h4>Premium Burguer</h4>
                     <p>Ingredientes:</p>
-                    <p>2 medallones de 120gr, lechuga, tomate, panceta, huevo y triple cheddar.</p>
+                    <p>2 medallones de 120gr, doble feta de queso cheddar, panceta, pepinillos, cebolla crispy y salsa BBQ.</p>
                     <button class="btn" id="cerrarPremium">Cerrar</button>
-
                 </div>
             </div>
         </div>
 
         <div class="card">
             <div class="card-body">
-                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/trple burguer.jpg" class="card-img-top" alt="...">
                 <h4 class="product-title">Triple Burger</h4>
-                <h5 class="price">$990</h5>
+                <h5 class="price">$1200</h5>
                 <button class="btn" id="triple">
                     Más info
                 </button>
-                <button class="btn add-cart">Agregar al carrito</button>
+                <button class="btn add-cart">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalTriple">
                 <div class="modal_">
                     <h4>Triple Burguer</h4>
                     <p>Ingredientes:</p>
-                    <p>3 medallones de 120gr, panceta, huevo, doble cheddar y salsa de la casa.</p>
+                    <p>3 medallones de 120gr, triple queso cheddar, mucha panceta y salsa BBQ.</p>
                     <button class="btn" id="cerrarTriple">Cerrar</button>
                 </div>
             </div>
@@ -165,21 +160,63 @@
 
         <div class="card">
             <div class="card-body">
-                <img src="./assets/burger2x1.jpg" class="card-img-top" alt="...">
-                <h4 class="product-title">Chesse Burger</h4>
-                <h5 class="price">$615</h5>
+                <img src="./assets/cheese.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Cheese Burger</h4>
+                <h5 class="price">$680</h5>
                 <button class="btn" id="chesse">
                     Más info
                 </button>
-                <button class="btn add-cart">Agregar al carrito</button>
+                <button class="btn add-cart">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
             </div>
             <!--MODAL-->
             <div class="modal_container" id="modalChesse">
                 <div class="modal_">
                     <h4>Cheese Burguer</h4>
                     <p>Ingredientes:</p>
-                    <p>2 medallones de 120gr, panceta y doble cheddar.</p>
+                    <p>2 medallones de 120gr, doble queso cheddar, cebolla brunoise y salsa BBQ</p>
                     <button class="btn" id="cerrarChesse">Cerrar</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <img src="./assets/slash.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Slash Burguer</h4>
+                <h5 class="price">$740</h5>
+                <button class="btn" id="slash">
+                    Más info
+                </button>
+                <button class="btn add-cart">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalSlash">
+                <div class="modal_">
+                    <h4>Slash Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>2 medallones de 120gr, doble queso cheddar, cebolla caramelizada y salsa picante.</p>
+                    <button class="btn" id="cerrarSlash">Cerrar</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <img src="./assets/Freddy.jpg" class="card-img-top" alt="...">
+                <h4 class="product-title">Freddy Burguer</h4>
+                <h5 class="price">$700</h5>
+                <button class="btn" id="freddy">
+                    Más info
+                </button>
+                <button class="btn add-cart">Agregar<i class="fa-sharp fa-solid fa-cart-shopping"></i></button>
+            </div>
+            <!--MODAL-->
+            <div class="modal_container" id="modalFreddy">
+                <div class="modal_">
+                    <h4>Freddy Burguer</h4>
+                    <p>Ingredientes:</p>
+                    <p>2 medallones de 120gr,  queso brie, cebolla caramelizada, rúcula, tomate y salsa agridulce.</p>
+                    <button class="btn" id="cerrarFreddy">Cerrar</button>
                 </div>
             </div>
         </div>
