modificacion del boton de compra

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                 <img src="./assets/clasica.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
-        
     </div>
     <!--LOGO WPP Y CARRITO DE COMPRA-->
     <div class="compra">
@@ -57,7 +56,13 @@
             <div class="total-price">$0</div>
         </div>
         <!--BUY BUTTON-->
-        <button type="button" class="btn-buy">Comprar ahora</button>
+        <button class="cta btn-buy">
+            <span class="hover-underline-animation">Comprar ahora!</span>
+            <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
+                <path transform="translate(30)" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10" id="Path_10"></path>
+            </svg>
+        </button>
+        <!--<button type="button" class="btn-buy">Comprar ahora</button> -->
         <!--CART CLOSE-->
         <i class="fa-regular fa-x" id="close-cart"></i>
     </div>
